plugins {
    id 'java'
}

repositories {
    mavenLocal()
    maven {
        url = 'https://repo.runelite.net'
    }
    mavenCentral()
}

def runeLiteVersion = 'latest.release'

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

    compileOnly 'org.projectlombok:lombok:1.18.20'

    implementation('com.google.api-client:google-api-client:2.6.0') {
        exclude group: 'com.google.oauth-client'
        exclude group: 'com.google.guava'
        exclude group: 'org.apache.httpcomponents'
        exclude group: 'commons-codec'
    }
    implementation('com.google.oauth-client:google-oauth-client-jetty:1.36.0') {
        exclude group: 'com.google.guava'
        exclude group: 'org.apache.httpcomponents'
    }
    implementation('com.google.apis:google-api-services-sheets:v4-rev20240514-2.0.0') {
        exclude group: 'com.google.guava'
        exclude group: 'org.apache.httpcomponents'
        exclude group: 'commons-logging'
        exclude group: 'commons-codec'
    }

    annotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'junit:junit:4.13.1'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'dev.thource.runelite.dudewheresmystuff'
version = '2.7.1'
//noinspection GroovyUnusedAssignment
sourceCompatibility = '11'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

targetCompatibility = JavaVersion.VERSION_11
